deploy/traefik/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-ingress
  labels:
    app: traefik
