deploy/traefik/04-deployment.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  namespace: traefik-ingress
  name: traefik
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - name: traefik
          image: traefik:v2.2
          args:
            - --api.insecure
            - --accesslog
            - --ping=true
            - --api.dashboard=true
            - --providers.kubernetescrd=true
            - --providers.kubernetesingress=true
            - --entrypoints.web.Address=:80
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: admin
              containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: admin
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: admin
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
