deploy/traefik/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller-admin
  namespace: traefik-ingress
  labels:
    app: traefik
spec:
  selector:
    app: traefik
  ports:
    - port: 8080
      name: admin
      targetPort: admin
